[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pip>=25.2",
    "spacy>=3.8.7",
    "uvicorn[standard]>=0.36.0",
]

[tool.uv.workspace]
members = [
    "sps_genai",
]
